--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git remote add origin https://github.com/GuilleRodriguez96/Segunda-entrega.git<!DOCTYPE html>
 <html lang="en">
 
 <head>
