--- a/paginas/vinos.html
+++ b/paginas/vinos.html
@@ -70,7 +70,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer conteiner">
         <div class="footer__title">
             <h2>Seguinos</h2>
         </div> 
